# llm-azure-tts

./: README.md  llm_azure_tts.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_azure_tts.py
